# My_shad_solutions

./: .gitignore  .gitlab-ci.yml  CONTRIBUTING.md  README.md  pyproject.toml  run.bat  testenv.docker
01.1.PythonTools/lecture/: PythonTools.ipynb  git_onboarding.ipynb
01.1.PythonTools/tasks/testlib_test/: testlib_test.py
01.2.BasicTypes/lecture/: BasicTypes.ipynb
01.2.BasicTypes/tasks/bin_basic/: bin_basic.py
01.2.BasicTypes/tasks/filter_list_by_list/: filter_list_by_list.py
01.2.BasicTypes/tasks/fizz_buzz/: fizz_buzz.py
01.2.BasicTypes/tasks/iterate_me/: iterate_me.py
01.2.BasicTypes/tasks/make_assert/: make_assert.py
01.2.BasicTypes/tasks/merge_lists/: merge_lists.py
01.2.BasicTypes/tasks/middle_value_of_triple/: middle_value_of_triple.py
02.1.DataStructures/lecture/: DataStructures.ipynb
04.1.HW1-Bson/tasks/mvp/: bson.py  (+1 more)
05.1.IteratorsGenerators/lecture/: IteratorsGenerators.ipynb
06.1.NamespacesAndDecorators/lecture/: NamespacesAndDecorators.ipynb  custom_telegram_api.py
07.2.ModulesPackagesImport/tasks/basic_module/: setup.cfg
07.2.ModulesPackagesImport/tasks/basic_module/simple_pass_manager/utils/: __init__.py  encryption.py
07.2.ModulesPackagesImport/tasks/steganography_tool/: pyproject.toml  test_public.py
07.2.ModulesPackagesImport/tasks/steganography_tool/steganography_tool/: cli.py
08.2.HW2/tasks/compgraph/: LIB_README.md  pyproject.toml
08.2.HW2/tasks/compgraph/compgraph/: __init__.py  algorithms.py  cli.py  external_sort.py  graph.py  operations.py  plot_image.py
08.2.HW2/tasks/compgraph/tests/: test_cli.py  test_custom_operations.py
09.1.NumpyAndPandas/lecture/: NumpyAndPandas2025.ipynb
(+60 files in other folders)
