[metadata]
name = simple_pass_manager
version = 0.0.1
author = Konstantin Chernyshev
author_email = kdchernyshev@gmail.com
description = A small package with simple password manager
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = simple_pass_manager
packages = find:
install_requires =
    cryptography
python_requires = >=3.9

[options.packages.find]
where = simple_pass_manager
